// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "bla",
    "key": "345678",
    "pathname": "/second/foo",
    "search": "foo=bar",
    "state": Object {},
    "url": "/second/foo?foo=bar#bla",
  },
]
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_entries 2`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "bla",
    "key": "345678",
    "pathname": "/second/foo",
    "search": "foo=bar",
    "state": Object {},
    "url": "/second/foo?foo=bar#bla",
  },
]
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_index 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_index 2`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 1`] = `
Object {
  "hash": "bla",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 2`] = `
Object {
  "hash": "bla",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "bla",
          "key": "345678",
          "pathname": "/second/foo",
          "search": "foo=bar",
          "state": Object {},
          "url": "/second/foo?foo=bar#bla",
        },
      ],
      "hasSSR": false,
      "hash": "bla",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {
        "param": "foo",
      },
      "pathname": "/second/foo",
      "query": Object {
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second/foo?foo=bar#bla",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 2`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "hasSSR": false,
    "hash": "bla",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "hasSSR": false,
    "hash": "bla",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 1`] = `"SECOND"`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 2`] = `"SECOND"`;

exports[`do NOT dispatch actions with identical URLs more than once: function - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "bla",
    "key": "345678",
    "pathname": "/second/foo",
    "search": "foo=bar",
    "state": Object {},
    "url": "/second/foo?foo=bar#bla",
  },
]
`;

exports[`do NOT dispatch actions with identical URLs more than once: function - history_index 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: function - response 1`] = `
Object {
  "hash": "bla",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "bla",
          "key": "345678",
          "pathname": "/second/foo",
          "search": "foo=bar",
          "state": Object {},
          "url": "/second/foo?foo=bar#bla",
        },
      ],
      "hasSSR": false,
      "hash": "bla",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {
        "param": "foo",
      },
      "pathname": "/second/foo",
      "query": Object {
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second/foo?foo=bar#bla",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: function - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: function - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: function - routes - SECOND - beforeEnter 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: function - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "hasSSR": false,
    "hash": "bla",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: function - title 1`] = `"SECOND"`;
